Use ServletBinding instead of our own implementation - could cause problems with OSR. Still there is an issue with Groovy classes not loading.
svn path=/trunk/; revision=20086